--- a/site/pages/v4/design/pills-en.hbs
+++ b/site/pages/v4/design/pills-en.hbs
@@ -1,6 +1,6 @@
 ---
 {
-	"title": "Alerts",
+	"title": "Pills",
 	"language": "en",
 	"altLangPrefix": "pills",
 	"css": ["https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome", "css/gridify" ],
