--- a/site/pages/v4/index-fr.hbs
+++ b/site/pages/v4/index-fr.hbs
@@ -896,7 +896,7 @@
 
 		<tr class="col-xs-12 col-sm-6 col-md-4">
            <td><a href="design/pills-fr.html" class="h4 mrgn-tp-0 mrgn-bttm-0" lang="en">Pills</a></td>
-          <td><p>(Description manquante)</p></td>
+          <td><p>Utiliser pour styliser une liste de navigation et pour apporter de l'attention sur un lien actif.</p></td>
           <td class="text-muted small">Balises : Liste</td>
           <td><hr class="mrgn-tp-0">
             <p><span class="glyphicon glyphicon-eye-close"></span> Aucune prévisualisation rapide n'est disponible.</p></td>
@@ -1094,7 +1094,7 @@
 
 		<tr class="col-xs-12 col-sm-6 col-md-4">
            <td><a href="design/progressmeter-fr.html" class="h4 mrgn-tp-0 mrgn-bttm-0">Barre de progrès et mesure</a></td>
-          <td><p>(Description manquante)</p></td>
+          <td><p>La barre de progression est utilisée pour fournir une rétroaction à jour sur la progression d'un flux de travail ou d'une action. Le compteur est utilisé pour afficher une valeur dans une plage lorsqu'il existe une valeur minimale et maximale connue (mesure scalaire).</p></td>
           <td class="text-muted small">Tags: </td>
 		  <td><p><span class="glyphicon glyphicon-eye-close"></span> Aucune prévisualisation rapide n'est disponible.</p></td>
 		  <td>Style CSS</td>
