Added bolding to the unstyled nested list example

--- a/site/pages/v4/design/lists-en.hbs
+++ b/site/pages/v4/design/lists-en.hbs
@@ -233,7 +233,7 @@
       <p>Unstyled nested list:</p>
         <pre><code>&ltul&gt;
   &lt;li&gt;List item 1
-    &lt;ul class=&quot;list-none&quot;&gt;
+    &lt;ul <strong>class=&quot;list-none&quot;</strong>&gt;
       &lt;li&gt;List item 1a&lt;/li&gt;
       &lt;li&gt;List item 1b&lt;/li&gt;
     &lt;/ul&gt;
