Added missing semi-colon to escaped code

--- a/site/pages/v4/design/lists-en.hbs
+++ b/site/pages/v4/design/lists-en.hbs
@@ -231,7 +231,7 @@
   &lt;li&gt;...&lt;/li&gt;
 &lt;/ul&gt;</code></pre>
       <p>Unstyled nested list:</p>
-        <pre><code>&ltul&gt;
+        <pre><code>&lt;ul&gt;
   &lt;li&gt;List item 1
     &lt;ul <strong>class=&quot;list-none&quot;</strong>&gt;
       &lt;li&gt;List item 1a&lt;/li&gt;
