--- a/site/pages/v4/design/icons-en.hbs
+++ b/site/pages/v4/design/icons-en.hbs
@@ -4,7 +4,7 @@
 	"language": "en",
 	"altLangPrefix": "icons",
 	"css": ["https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome"],
-	"dateModified": "2016-10-17"
+	"dateModified": "2017-06-05"
 }
 ---
 
@@ -72,7 +72,7 @@
   </div>
   <h3 id="gly">Glyphicons</h3>
   <p>Glyphicons provides 250 glyphs. This is part of the <abbr title="Web Experience Toolkit">WET</abbr> core build. </p>
-  <p><a href="http://getbootstrap.com/components/#glyphicons"  class="btn btn-primary" >View Glyphicons</a></p>
+  <p><a href="http://bootstrapdocs.com/v3.3.1/docs/components/#glyphicons"  class="btn btn-primary" >View Glyphicons</a></p>
   <h3 id="fon">Font Awesome icons</h3>
   <p>Font Awesome provides 600+ glyphs. These icons are <strong>not</strong> part of the <abbr title="Web Experience Toolkit">WET</abbr> core build. Simply add this code within the <code>&lt;head&gt;</code> of the page: <code>&lt;link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"&gt;</code></p>
   <p><a href="http://fortawesome.github.io/Font-Awesome/icons/" class="btn btn-primary"  >View Font Awesome icons</a> <a href="http://fortawesome.github.io/Font-Awesome/examples/"  class="btn btn-primary">View Font Awesome stacking, resizing, rotating, spinning icon examples</a></p>
