Alignment: Removed duplicate Bootstrap link from French version.

--- a/site/pages/v4/design/alignment-fr.hbs
+++ b/site/pages/v4/design/alignment-fr.hbs
@@ -4,7 +4,7 @@
 	"language": "fr",
 	"altLangPrefix": "alignment",
 	"css": ["https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome", "css/gridify" ],
-	"dateModified": "2016-10-17"
+	"dateModified": "2017-06-05"
 }
 ---
 
@@ -184,4 +184,4 @@
       <pre><code>&lt;p <strong>class=&quot;text-right&quot;</strong>&gt;...&lt;/p&gt;</code></pre>
     </div>
   </div>
-  <p class="mrgn-tp-lg text-muted">Une partie du code et des documents pour cette page provient de <a href="http://getbootstrap.com/" rel="external">Bootstrap<span  class="wb-inv"> (lien externe</span></a><a href="http://getbootstrap.com/" ><span  class="wb-inv">)</span></a></p>
+  <p class="mrgn-tp-lg text-muted">Une partie du code et des documents pour cette page provient de <a href="http://getbootstrap.com/" rel="external">Bootstrap<span  class="wb-inv"> (lien externe)</span></a></p>
