Guide: Added nav elements to ToCs.
Related to wet-boew/wet-boew#8177.

--- a/site/pages/v4/accessibility/guide-en.hbs
+++ b/site/pages/v4/accessibility/guide-en.hbs
@@ -9,7 +9,7 @@
 <p>The following summarizes selected techniques from the <a href="http://www.w3.org/TR/WCAG20/" rel="external">Web Content Accessibility Guidelines (WCAG) 2.0</a> for satisfying the most common applicable success criteria related to this topic.Additional WCAG 2.0 success criteria, techniques, and failures not listed here may also be applicable depending on the content.</p>
 <div class="wb-prettify all-pre">
 	<div class="row">
-		<div class="col-md-6 mrgn-bttm-lg">
+		<nav role="navigation" class="col-md-6 mrgn-bttm-lg">
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h2 class="panel-title">Table of contents</h2>
@@ -27,7 +27,7 @@
 					<li><a href="#related-links">Related Links</a></li>
 				</ul>
 			</div>
-		</div>
+		</nav>
 	</div>
 	<!-- Text -->
 	<div class="row">
