--- a/site/pages/v4/accessibility/introduction-en.hbs
+++ b/site/pages/v4/accessibility/introduction-en.hbs
@@ -7,7 +7,7 @@
 }
 ---
 <div class="row">
-	<div class="col-md-8">
+	<nav role="navigation" class="col-md-8">
 		<div class="panel panel-default">
 			<div class="panel-heading">
 				<h2 class="panel-title">Table of contents</h2>
@@ -18,7 +18,7 @@
 				<li><a href="#links">Related links</a></li>
 			</ul>
 		</div>
-	</div>
+	</nav>
 </div>
 <h2 id="ov" class="page-header">Overview</h2>
 <div class="row">
