--- a/site/pages/v4/design/forms-en.hbs
+++ b/site/pages/v4/design/forms-en.hbs
@@ -10,7 +10,7 @@
 
   <span class="wb-prettify all-pre"></span>
   <div class="row">
-    <section class="col-md-8">
+    <nav role="navigation" class="col-md-8">
       <div class="panel panel-default">
         <header class="panel-heading">
           <h2 class="panel-title">Table of contents</h2>
@@ -47,7 +47,7 @@
           </ul>
         </div>
       </div>
-    </section>
+    </nav>
     <section class="col-md-4">
       <div class="panel panel-warning">
         <div class="panel-body">
