--- a/site/pages/v4/design/icons-en.hbs
+++ b/site/pages/v4/design/icons-en.hbs
@@ -10,7 +10,7 @@
 
   <span class="wb-prettify all-pre"></span>
   <div class="row">
-    <section class="col-md-8">
+    <nav role="navigation" class="col-md-8">
       <div class="panel panel-default">
         <header class="panel-heading">
           <h2 class="panel-title">Table of contents</h2>
@@ -32,7 +32,7 @@
           </ul>
         </div>
       </div>
-    </section>
+    </nav>
   </div>
   <h2 id="des"><span class="fa-stack"><span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-paint-brush fa-stack-1x fa-inverse"></span></span>Design and coding</h2>
   <p>Use  one of the two icon sets, Glyphicons or Font Awesome for decorative purposes. Icons  are glyphs − picture-based fonts, similar to wingdings. They do not convey  meaning, unlike  traditional fonts. Therefore, real text must accompany the  icon to ensure accessibility requirements are met. Make the text visible or invisible,  as long as it is present.</p>
