--- a/site/pages/v4/design/icons-fr.hbs
+++ b/site/pages/v4/design/icons-fr.hbs
@@ -10,7 +10,7 @@
 
   <span class="wb-prettify all-pre"></span>
   <div class="row">
-    <section class="col-md-8">
+    <nav role="navigation" class="col-md-8">
       <div class="panel panel-default">
         <header class="panel-heading">
           <h2 class="panel-title">Table des matières </h2>
@@ -32,7 +32,7 @@
           </ul>
         </div>
       </div>
-    </section>
+    </nav>
   </div>
   <h2 id="des"><span class="fa-stack"><span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-paint-brush fa-stack-1x fa-inverse"></span></span> Conception et codage</h2>
   <p>Utilisez l'un des deux ensembles d'icônes, les <span lang="en">Glyphicons</span> ou la police <span lang="en">Font Awesome</span> à des fins décoratives. Les icônes sont des glyphes − un dessin sur des polices, semblable à la police Wingdings. Il ne transmettent pas de signification, contrairement aux polices traditionnelles. Par conséquent, le texte réel doit accompagner l'icône afin de s'assurer que les exigences en matière d'accessibilité sont respectées. Rendez le texte visible ou invisible, pourvu qu'il soit présent.</p>
