--- a/site/pages/v4/writing/dvlpmnt-en.hbs
+++ b/site/pages/v4/writing/dvlpmnt-en.hbs
@@ -10,7 +10,7 @@
 
   <p>Content development  is the process of identifying what information meets your users needs to complete their tasks, as well as meets your organizational goals. The process involves defining your users and identifying their tasks. </p>
   <div class="row mrgn-tp-lg">
-    <div class="col-md-8">
+    <nav role="navigation" class="col-md-8">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">Table of contents</h2>
@@ -32,7 +32,7 @@
           </ul>
         </div>
       </div>
-    </div>
+    </nav>
     <div class="col-md-4">
       <div class="panel panel-default">
         <div class="panel-heading">
