--- a/site/pages/v4/writing/dvlpmnt-fr.hbs
+++ b/site/pages/v4/writing/dvlpmnt-fr.hbs
@@ -10,7 +10,7 @@
 
   <p>Le développement de contenu est le processus qui consiste à déterminer les renseignements répondant aux besoins des utilisateurs dont ces derniers ont besoin pour exécuter leurs tâches, ainsi que les  buts de l'organisation. Le processus comprend la définition de vos utilisateurs et la détermination de leurs tâches. </p>
   <div class="row mrgn-tp-lg">
-    <div class="col-md-8">
+    <nav role="navigation" class="col-md-8">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">Table des matières</h2>
@@ -32,7 +32,7 @@
           </ul>
         </div>
       </div>
-    </div>
+    </nav>
     <div class="col-md-4">
       <div class="panel panel-default">
         <div class="panel-heading">
