--- a/site/pages/v4/writing/rchtctr-en.hbs
+++ b/site/pages/v4/writing/rchtctr-en.hbs
@@ -10,7 +10,7 @@
 
   <p>Content  architecture is how tasks and information about those tasks are categorized and organized &minus; whether it's one web page, or spread over dozens of pages. Good content architecture suits your users'  needs and expectations so they can quickly find  what they need.</p>
   <div class="row mrgn-tp-lg">
-    <div class="col-md-8">
+    <nav role="navigation" class="col-md-8">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">Table of contents</h2>
@@ -28,7 +28,7 @@
           </ul>
         </div>
       </div>
-    </div>
+    </nav>
     <div class="col-md-4">
       <div class="panel panel-default">
         <div class="panel-heading">
