--- a/site/pages/v4/writing/rchtctr-fr.hbs
+++ b/site/pages/v4/writing/rchtctr-fr.hbs
@@ -10,7 +10,7 @@
 
   <p>L'architecture de contenu est la façon dont les tâches et l'information sur celles-ci sont catégorisées et organisées – que ce soit sur une page Web ou sur des douzaines de pages. Une bonne architecture de contenu répond aux besoins et aux attentes de vos utilisateurs, de sorte que ces derniers trouvent rapidement ce dont ils ont besoin.</p>
   <div class="row mrgn-tp-lg">
-    <div class="col-md-8">
+    <nav role="navigation" class="col-md-8">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">Table des matières</h2>
@@ -28,7 +28,7 @@
           </ul>
         </div>
       </div>
-    </div>
+    </nav>
     <div class="col-md-4">
       <div class="panel panel-default">
         <div class="panel-heading">
