--- a/site/pages/v4/writing/stl-en.hbs
+++ b/site/pages/v4/writing/stl-en.hbs
@@ -11,7 +11,7 @@
 
   <p>Content style and flow of web content   consists of short, concise, and grammatically correct  text.  Content focuses on users' tasks to help them quickly scan for, find and apply the information  they need. </p>
   <div class="row mrgn-tp-lg">
-    <div class="col-md-8">
+    <nav role="navigation" class="col-md-8">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">Table of contents</h2>
@@ -30,7 +30,7 @@
           </ul>
         </div>
       </div>
-    </div>
+    </nav>
     <div class="col-md-4">
       <div class="panel panel-default">
         <div class="panel-heading">
