--- a/site/pages/v4/writing/stl-fr.hbs
+++ b/site/pages/v4/writing/stl-fr.hbs
@@ -10,7 +10,7 @@
 
   <p>Le style et le flux du contenu Web sont composés de texte court, concis et grammaticalement correct. Le contenu est centré sur les tâches des utilisateurs pour les aider à parcourir rapidement le texte, à trouver l'information dont ils ont besoin et à appliquer cette information, le tout avec rapidité.</p>
   <div class="row mrgn-tp-lg">
-    <div class="col-md-8">
+    <nav role="navigation" class="col-md-8">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">Table des matières</h2>
@@ -29,7 +29,7 @@
           </ul>
         </div>
       </div>
-    </div>
+    </nav>
     <div class="col-md-4">
       <div class="panel panel-default">
         <div class="panel-heading">
