--- a/site/pages/v4/writing/strctr-en.hbs
+++ b/site/pages/v4/writing/strctr-en.hbs
@@ -10,7 +10,7 @@
 
   <p>Content structure and presentation is by topic, or task &minus; whichever  audience best suits your users. Keep the structure simple, logical, and consistent so users can quickly  become familiar with your content. Then users can easily navigate through it to complete their tasks.</p>
   <div class="row mrgn-tp-lg">
-    <div class="col-md-8">
+    <nav role="navigation" class="col-md-8">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">Table of contents</h2>
@@ -32,7 +32,7 @@
           </ul>
         </div>
       </div>
-    </div>
+    </nav>
     <div class="col-md-4">
       <div class="panel panel-default">
         <div class="panel-heading">
