--- a/site/pages/v4/writing/strctr-fr.hbs
+++ b/site/pages/v4/writing/strctr-fr.hbs
@@ -10,7 +10,7 @@
 
   <p>La structure et la présentation du contenu sont fondées sur le sujet, ou sur la tâche, selon ce qui convient le mieux à vos utilisateurs. Faites en sorte que la structure demeure simple, logique et cohérente afin que les utilisateurs puissent se familiariser rapidement avec votre contenu. Ensuite, les utilisateurs pourront l'explorer facilement pour accomplir leurs tâches.</p>
   <div class="row mrgn-tp-lg">
-    <div class="col-md-8">
+    <nav role="navigation" class="col-md-8">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">Table des matières</h2>
@@ -32,7 +32,7 @@
           </ul>
         </div>
       </div>
-    </div>
+    </nav>
     <div class="col-md-4">
       <div class="panel panel-default">
         <div class="panel-heading">
