Changed login to sign in and logout to sign out
Changed login to sign in and logout to sign out

--- a/site/pages/v4/design/buttons-en.hbs
+++ b/site/pages/v4/design/buttons-en.hbs
@@ -600,20 +600,23 @@
           </ul></td>
       </tr>
       <tr>
-        <td>Login</td>
+        <td>Sign in</td>
         <td><ul class="list-unstyled lst-spcd">
             <li>
-              <button type="submit" class="btn btn-primary">Login</button>
+              <button type="submit" class="btn btn-primary">Sign in</button>
             </li>
             <li>
-              <button type="submit" class="btn btn-primary"><span class="fa fa-sign-in"></span> Login</button>
+              <button type="submit" class="btn btn-primary"><span class="fa fa-sign-in"></span> Sign in</button> 
             </li>
             <li>
-            <li>Text only: <a href="#"><span class="fa fa-sign-in"></span> Login</a> or <a href="#"> Login</a> </li>
+              <button type="submit" class="btn btn-primary"><span class="="glyphicon glyphicon-off"></span> Sign in</button> 
+            </li>
+            <li>
+            <li>Text only: <a href="#"><span class="fa fa-sign-in"></span> Sign in</a> or <a href="#"> Sign in</a> </li>
           </ul></td>
         <td><ul>
             <li>Use to log into an application</li>
-            <li> Determine location of "Login" as part of the Information Architecture of the site</li>
+            <li> Determine location of "Sign in" as part of the Information Architecture of the site</li>
           </ul></td>
       </tr>
       <tr>
@@ -621,23 +624,27 @@
         <td><button type="submit" class="btn btn-primary">Register</button></td>
         <td><ul>
             <li>Use to register for a service or program</li>
-            <li> Do not combine with "Login" for first time users</li>
+            <li> Do not combine with "Sign in" for first time users</li>
           </ul></td>
       </tr>
       <tr>
-        <td>Logout</td>
+        <td>Sign out</td>
         <td><ul class="list-unstyled lst-spcd">
             <li>
-              <button type="submit" class="btn btn-default">Logout</button>
+              <button type="submit" class="btn btn-default">Sign out</button>
             </li>
             <li>
-              <button type="submit" class="btn btn-default"><span class="fa fa-sign-out"></span> Logout</button>
+              <button type="submit" class="btn btn-default"><span class="fa fa-sign-out"></span> Sign out</button>
             </li>
-            <li>Text only: <a href="#"><span class="fa fa-sign-out"></span> Logout</a> or <a href="#"> Logout</a> </li>
+            <li>
+              <button type="submit" class="btn btn-primary"><span class="="glyphicon glyphicon-off"></span> Sign out</button> 
+            </li>
+
+            <li>Text only: <a href="#"><span class="fa fa-sign-out"></span> Sign out</a> or <a href="#"> Sign out</a> </li>
           </ul></td>
         <td><ul>
             <li>Use to log out of an application</li>
-            <li> Ensure the "Logout" button appears on every page at the top right hand corner, for all applications that require login</li>
+            <li> Ensure the "Sign out" button appears on every page at the top right hand corner, for all applications that require sign in</li>
           </ul></td>
       </tr>
       <tr>
@@ -994,7 +1001,7 @@
                 <li>Users often close the window of their browser to get out of an application</li>
               </ul>
             </li>
-            <li>Use “Logout” button for applications that require a login</li>
+            <li>Use “Sign out” button for applications that require a sign in</li>
             <li>Consider using “Cancel <abbr title="X X X ">XXX</abbr>” button, as it may be more appropriate depending on the requirement of the application</li>
           </ul></td>
       </tr>
